--- a/src/components/List.css
+++ b/src/components/List.css
@@ -1,16 +1,6 @@
-* {
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  padding: 0;
+.list {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-
-.App {
-  width: 100%;
 }
